tests/sksl/errors/ReservedNameInterface.glsl
### Compilation failed:

error: 1: 'interface' is a reserved word
int interface;
    ^^^^^^^^^
1 error
